implement txnhistory and parameter
