# backend/docs/swagger.json
@@ -21,6 +21,84 @@
     "host": "127.0.0.1:8000",
     "basePath": "/api",
     "paths": {
+        "/accounts/create": {
+            "post": {
+                "description": "create new account with user id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Accounts"
+                ],
+                "summary": "create new account with user id",
+                "parameters": [
+                    {
+                        "description": "Account Data",
+                        "name": "Payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AccoutCreateInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Ok",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.ResponseSuccessAccount"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/accounts/{userId}": {
+            "get": {
+                "description": "get account by user id func get account infomation by userid",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Accounts"
+                ],
+                "summary": "get account by user id func get account infomation by userid",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.ResponseSuccessAccount"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/auth/login": {
             "post": {
                 "description": "login",
@@ -250,7 +328,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.User"
+                                "$ref": "#/definitions/models.ResponseSuccessUser"
                             }
                         }
                     }
@@ -287,7 +365,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.User"
+                                "$ref": "#/definitions/models.ResponseSuccessUser"
                             }
                         }
                     }
@@ -324,7 +402,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.User"
+                                "$ref": "#/definitions/models.ResponseSuccessUser"
                             }
                         }
                     }
@@ -361,7 +439,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.User"
+                                "$ref": "#/definitions/models.ResponseSuccessUser"
                             }
                         }
                     }
@@ -396,7 +474,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.User"
+                                "$ref": "#/definitions/models.ResponseSuccessUser"
                             }
                         }
                     }
@@ -405,6 +483,136 @@
         }
     },
     "definitions": {
+        "models.Account": {
+            "type": "object",
+            "properties": {
+                "accountToken": {
+                    "type": "string"
+                },
+                "accountType": {
+                    "type": "string"
+                },
+                "active": {
+                    "type": "boolean"
+                },
+                "balance": {
+                    "type": "integer"
+                },
+                "blockFlag": {
+                    "type": "integer"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "lastEntryLocId": {
+                    "type": "integer"
+                },
+                "lastEntrySpId": {
+                    "type": "integer"
+                },
+                "lastEntryTime": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "txnHistories": {
+                    "description": "One-to-many relationship with TxnHistory",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.TxnHistory"
+                    }
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "user": {
+                    "description": "Association",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    ]
+                },
+                "userID": {
+                    "description": "Foreign key, unique constraint for one-to-one relationship",
+                    "type": "string"
+                }
+            }
+        },
+        "models.AccountResponse": {
+            "type": "object",
+            "properties": {
+                "account_token": {
+                    "type": "string"
+                },
+                "account_type": {
+                    "type": "string"
+                },
+                "active": {
+                    "type": "boolean"
+                },
+                "balance": {
+                    "type": "integer"
+                },
+                "block_flag": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "last_entry_loc_id": {
+                    "type": "integer"
+                },
+                "last_entry_sp_id": {
+                    "type": "integer"
+                },
+                "last_entry_time": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "txn_histories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.TxnHistory"
+                    }
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user": {
+                    "description": "UserID         uuid.UUID    `json:\"user_id\"`",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.UserResponse"
+                        }
+                    ]
+                }
+            }
+        },
+        "models.AccoutCreateInput": {
+            "type": "object",
+            "required": [
+                "account_type",
+                "user_id"
+            ],
+            "properties": {
+                "account_type": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "models.ResponseBody": {
             "type": "object",
             "properties": {
@@ -422,6 +630,31 @@
                     "properties": {
                         "message": {
                             "type": "string"
+                        }
+                    }
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ResponseSuccessAccount": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "object",
+                    "properties": {
+                        "account": {
+                            "$ref": "#/definitions/models.AccountResponse"
+                        },
+                        "txn_histories": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.TxnHistory"
+                            }
+                        },
+                        "user": {
+                            "$ref": "#/definitions/models.UserResponse"
                         }
                     }
                 },
@@ -507,35 +740,91 @@
             "type": "object",
             "required": [
                 "email",
-                "firstName",
-                "lastName",
+                "first_name",
+                "last_name",
                 "password",
-                "passwordConfirm",
+                "password_confirm",
                 "phone",
-                "userName"
+                "user_name"
             ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "firstName": {
+                "first_name": {
                     "type": "string"
                 },
-                "lastName": {
+                "last_name": {
                     "type": "string"
                 },
                 "password": {
                     "type": "string",
                     "minLength": 8
                 },
-                "passwordConfirm": {
+                "password_confirm": {
                     "type": "string",
                     "minLength": 8
                 },
                 "phone": {
                     "type": "string"
                 },
-                "userName": {
+                "user_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.TxnHistory": {
+            "type": "object",
+            "required": [
+                "equipmentNumber",
+                "locEntryId",
+                "locExitId",
+                "spId",
+                "txnAmount",
+                "txnRefId",
+                "txnTypeId"
+            ],
+            "properties": {
+                "account": {
+                    "description": "Association",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Account"
+                        }
+                    ]
+                },
+                "accountID": {
+                    "description": "Foreign key to Account",
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "equipmentNumber": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "locEntryId": {
+                    "type": "integer"
+                },
+                "locExitId": {
+                    "type": "integer"
+                },
+                "spId": {
+                    "type": "integer"
+                },
+                "txnAmount": {
+                    "type": "integer"
+                },
+                "txnRefId": {
+                    "type": "string"
+                },
+                "txnTypeId": {
+                    "type": "integer"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -543,6 +832,14 @@
         "models.User": {
             "type": "object",
             "properties": {
+                "account": {
+                    "description": "One-to-one relationship with Account",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Account"
+                        }
+                    ]
+                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -581,13 +878,13 @@
         "models.UserPasswordUpdate": {
             "type": "object",
             "properties": {
-                "confirmNewPassword": {
+                "confirm_new_password": {
                     "type": "string"
                 },
-                "newPassword": {
+                "new_password": {
                     "type": "string"
                 },
-                "oldPassword": {
+                "old_password": {
                     "type": "string"
                 }
             }
@@ -595,19 +892,22 @@
         "models.UserResponse": {
             "type": "object",
             "properties": {
+                "account_id": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
                 "email": {
                     "type": "string"
                 },
-                "firstName": {
+                "first_name": {
                     "type": "string"
                 },
                 "id": {
                     "type": "string"
                 },
-                "lastName": {
+                "last_name": {
                     "type": "string"
                 },
                 "phone": {
@@ -619,7 +919,7 @@
                 "updated_at": {
                     "type": "string"
                 },
-                "userName": {
+                "user_name": {
                     "type": "string"
                 }
             }
@@ -630,10 +930,10 @@
                 "email": {
                     "type": "string"
                 },
-                "firstName": {
+                "first_name": {
                     "type": "string"
                 },
-                "lastName": {
+                "last_name": {
                     "type": "string"
                 },
                 "password": {
@@ -645,7 +945,7 @@
                 "role": {
                     "type": "string"
                 },
-                "userName": {
+                "user_name": {
                     "type": "string"
                 },
                 "verified": {
